log/build_2023-09-18_16-54-57/my_bleak/stderr.log
  File "/home/ngocdai/lidar_ws/install/my_bleak/lib/python3.10/site-packages/my_bleak/bleak_node.py", line 23
    await self.imu_client = BleakClient(self.imu_address)
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to await expression here. Maybe you meant '==' instead of '='?

